fix: sidebar overflow

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   padding: 2rem 3rem 0 3rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
